<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PostActivity">

    <include layout="@layout/toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_frame"/>

    //0 show category

    <FrameLayout
        android:id="@+id/frame_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_0"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/lion_shade"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_animal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/animal"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_animal"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_lion"

                        />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/fish"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_fish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/Fish"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_fish"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_fish"

                        />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/bird"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt_bird"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/Birds"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_bird"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_bird"

                        />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <!--   <Button
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/next"
               android:layout_alignParentBottom="true"
               android:id="@+id/next_0"/>
               -->
    </FrameLayout>


    //1 show types title and description and price

    <FrameLayout
        android:id="@+id/frame_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_tyategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />


            <EditText
                android:layout_below="@+id/spinner_type_category"
                android:id="@+id/txt_ads_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />

            <EditText
                android:id="@+id/txt_ads_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_ads_title"
                android:hint="@string/description" />

            <EditText
                android:id="@+id/txt_ads_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_ads_description"
                android:hint="@string/price" />

            <Button
                android:id="@+id/next_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/next" />
        </RelativeLayout>
    </FrameLayout>

    //2 show upload pic

    <FrameLayout
        android:id="@+id/frame_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ads_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_add_img" />

            <Button
                android:id="@+id/next_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/upload" />
        </RelativeLayout>


    </FrameLayout>

    //3 show location and phone

    <FrameLayout
        android:id="@+id/frame_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_ads_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/phone_no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_ads_phone"
                android:orientation="horizontal"
                android:weightSum="5">

                <EditText
                    android:id="@+id/txt_ads_Location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/location" />

                <ImageButton
                    android:id="@+id/search_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/purple_700"
                    android:paddingBottom="5dp"
                    android:src="@drawable/ic_location_search" />

            </LinearLayout>

            <Button
                android:id="@+id/next_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/post_your_ad" />
        </RelativeLayout>
    </FrameLayout>


</LinearLayout>